# claude-dashboard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: publish.yml
src/claude_code_dashboard/: __init__.py  __main__.py  agent_panel.py  agent_parser.py  agent_scanner.py  app.py  cli.py  constants.py  messages.py  sprites.py  token_panel.py
src/claude_dashboard/: __main__.py  agent_panel.py  agent_parser.py  agent_scanner.py  app.py  cli.py  constants.py  sprites.py  token_panel.py
