[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-code-dashboard"
version = "0.1.0"
description = "Terminal dashboard for Claude Code: token usage + agent status with pixel sprites"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "linziyou0601", email = "qqq23939889@gmail.com" },
]
dependencies = [
    "claude-monitor>=3.1.0,<4",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
[project.urls]
Homepage = "https://github.com/linziyou0601/claude-code-dashboard"
Repository = "https://github.com/linziyou0601/claude-code-dashboard"

[project.scripts]
claude-dash = "claude_code_dashboard.cli:main"
ccd = "claude_code_dashboard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_code_dashboard"]
